k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sur-ingress
  namespace: sur-o-jhankaar
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
        - surojhankaar.in
      secretName: sur-tls-cert
  rules:
    - host: surojhankaar.in
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sur-server-service
                port:
                  number: 5000
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: sur-server-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sur-web-service
                port:
                  number: 3000
